2005-09-10  John Luke  <john.luke@gmail.com>

	* worker/bloggers.xml: update my feed location
	
2005-09-09  Aaron Bockover  <aaron@aaronbock.net>

	* www/monologue.cs:
	* www/planet.cs:
	* worker/default.tpl: Updates to new layout, implemented in template
	* www/images/monologue-logo.png: A decent logo for monologue
	* worker/monologue-worker.cs: Minor changes to template variable outputs

2005-09-09  Eric Butler <eric@extremeboredom.net>

	* General changes:
	  New look, based on the new mono website and planet gnome
	  Moved files around to make things cleaner
	  Added additional images, including hackergotchis

	* AUTHORS: Added my name
	* worker/monologue-worker.cs: Added support for IRC nicknames and
	hackergotchies. 
	* worker/default.tpl: Updated for new look
	* worker/bloggers.xml: Added many irc nicknames and a few
	hackergotchies
	* www/js/collapse.js: New file, some javascript code to
	expand/collapse posts.
	  
2005-07-10  Jb Evain  <jbevain@gmail.com>

	* worker/blogger.xml: update my feed

2005-07-08 Aaron Bockover <aaron@aaronbock.net>

	* worker/blogger.xml: Disabled two feeds throwing weird Read exception,
	see header I placed in XML file for details.

	* worker/blogger.xml: Added Jeff Tickle's RSS Feed

2005-05-30 Christian Hergert <christian.hergert@gmail.com>

	* worker/blogger.xml: Fix url which had & to use &amp; instead.

2005-04-24 Christian Hergert <christian.hergert@gmail.com>

	* worker/blogger.xml: Add Aaron Bockover's mono rsss feed.

2005-04-14 Peter Johanson <latexer@gentoo.org>

	* worker/blogger.xml: add my "Hacking" feed at todd's request.

2005-03-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: group requests by URL.

2005-03-13  Mark Crichton  <crichton@gimp.org>

	* worker/blogger.xml: changed the URL.  Don't think people would be
	interested in my banality

2005-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* worker/blogger.xml : moved my url.

2005-03-06  Joshua Tauberer <tauberer@for.net>
