@@ -1,3 +1,9 @@
+2005-09-11  Eric Butler <eric@extremeboredom.net>
+
+	* worker/monologue-worker.cs: Make RSS Feed include author in post title
+	* www/css/monologue.css: Tweaked colors, Removed collapse buttons (because it didnt work properly in safari)
+	* worker/bloggers.xml: Added more hackerochi images
+	
 2005-09-10  John Luke  <john.luke@gmail.com>
 
 	* worker/bloggers.xml: update my feed location
